wrap in leftMarginSection

--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -159,7 +159,8 @@
 
   }
 
-  .component-left-margin-section--thank-you-apps {
+  .component-left-margin-section--thank-you-apps,
+  .component-left-margin-section--thank-you-consent {
     .component-left-margin-section__content {
       border-top: 1px solid gu-colour(garnett-neutral-4);
     }
