--- a/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
+++ b/assets/components/productPage/productPageTextBlock/productPageTextBlock.scss
@@ -15,9 +15,18 @@
   }
 }
 
+.component-product-page-text-block__callout {
+  @include gu-fontset-heading;
+  & > strong {
+    padding: 0 ($gu-h-spacing / 4);
+    background-color: gu-colour(news-garnett-highlight);
+    color: gu-colour(garnett-neutral-1);
+  }
+}
+
 .component-product-page-text-block {
   @include gu-fontset-body;
-  overflow-wrap: break-word;
+overflow-wrap: break-word;
   max-width: gu-span(7);
   @include mq($from: desktop) {
     max-width: gu-span(8);
