--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -173,6 +173,9 @@ header[role="banner"] {
 }
 
 .countryGroups {
+  font-family: $gu-text-sans-web;
+  margin-top: $gu-v-spacing * 2.5;
+  max-width: 355px;
   margin-left: 10px;
   text-overflow: ellipsis;
   width: 185px;
@@ -187,9 +190,7 @@ header[role="banner"] {
   }
 
   @include mq($from: tablet) {
-    font-family: $gu-text-sans-web;
-    margin-top: $gu-v-spacing * 2.5;
-    max-width: 355px;
+    margin-left: auto;
     padding: 0;
     width: 100%;
     cursor: pointer;
@@ -307,11 +308,16 @@ header[role="banner"] {
 /*= FOOTER */
 
 footer[role="contentinfo"] {
+  padding: 0 ($gu-h-spacing / 2);
   background: gu-colour(media-garnett-main-1);
   color: gu-colour(garnett-neutral-2);
-  padding-bottom: $gu-v-spacing * 2;
   font-size: 12px;
   display: flex;
+
+  @include mq($from: tablet) {
+    padding: 0 0 ($gu-v-spacing * 2);
+    width: auto;
+  }
 
   @include mq($from: leftCol) {
     padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
