--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -9,6 +9,7 @@
 @import '~components/ctaLink/ctaLink';
 @import '~components/generalErrorMessage/generalErrorMessage';
 @import '~components/productPage/productPageButton/productPageButton';
+@import '~components/marketingConsentNew/marketingConsent';
 
 body {
   min-height: 100vh;
