--- a/assets/pages/new-contributions-landing/components/ContributionThankYou/ContributionThankYou.scss
+++ b/assets/pages/new-contributions-landing/components/ContributionThankYou/ContributionThankYou.scss
@@ -1,6 +1,6 @@
 // -----  gu-sass ----- //
 
-.thank-you__container {
+.thank-you__container .header{
   @include mq($from: mobile, $until: tablet) {
     background-color: gu-colour(news-garnett-highlight);
   }
