--- a/assets/pages/new-contributions-landing/contributionsLanding.scss
+++ b/assets/pages/new-contributions-landing/contributionsLanding.scss
@@ -338,6 +338,7 @@ footer[role="contentinfo"] a {
   background: gu-colour(garnett-neutral-5);
   padding: 0 10px;
   overflow: hidden;
+  flex-grow: 1;
 
   @include mq($from: tablet) {
     border-color: gu-colour(garnett-neutral-4);
