--- a/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
+++ b/assets/pages/digital-subscription-checkout/digitalSubscriptionCheckout.scss
@@ -177,7 +177,15 @@
     }
   }
 
-  .thank-you-content__heading {
+  .component-left-margin-section--thank-you-consent {
+    .component-left-margin-section__content {
+      border-bottom: 0;
+      padding-bottom: 0;
+    }
+  }
+
+  .thank-you-content__heading,
+  .marketing-permissions__title {
     font-size: 22px;
     line-height: 1.18;
     font-weight: 300;
@@ -209,12 +217,15 @@
     }
   }
 
-  .thank-you-content__copy {
+  .thank-you-content__copy,
+  .marketing-permissions__message {
     font-size: 17px;
     line-height: 1.25;
     font-family: $gu-headline;
     color: gu-colour(media-garnett-main-1);
     margin: $gu-v-spacing 0;
+    letter-spacing: 0;
+    font-weight: 400;
 
     @include mq($from: phablet) {
       width: 560px;
@@ -240,5 +251,22 @@
   .thank-you-content__link {
     color: gu-colour(garnett-neutral-6);
   }
-
+  
+  .marketing-permissions {
+    border-bottom: 0;
+    @include mq($from: desktop) {
+      position: relative;
+      padding-bottom: $gu-v-spacing * 4;  
+    }
+    .svg-newsletters {
+      display: block;
+      @include mq($from: desktop) {
+        position: absolute;
+        bottom: 0;
+        max-height: 90%;
+        left: gu-span(7); 
+      }
+    }
+  }
+  
 }
