--- a/assets/pages/new-contributions-landing/components/ContributionThankYou/ContributionThankYou.scss
+++ b/assets/pages/new-contributions-landing/components/ContributionThankYou/ContributionThankYou.scss
@@ -104,3 +104,21 @@
   padding-bottom: $gu-v-spacing;
 }
 
+.marketing-permissions.marketing-permissions--newsletter {
+  border-bottom: 1px solid gu-colour(garnett-neutral-4);
+}
+
+.marketing-permissions__message {
+  font-family: $gu-text-egyptian-web;
+  letter-spacing: -0.5px;
+  margin-bottom: 24px;
+  line-height: 20px;
+}
+
+.marketing-permissions__title {
+  font-family: $gu-text-egyptian-web;
+  letter-spacing: -0.5px;
+  font-weight: 900;
+  font-size: 17px;
+  margin: ($gu-v-spacing / 3) 0;
+}
