--- a/assets/pages/new-contributions-landing/components/ContributionThankYou/ContributionThankYou.scss
+++ b/assets/pages/new-contributions-landing/components/ContributionThankYou/ContributionThankYou.scss
@@ -104,18 +104,18 @@
   padding-bottom: $gu-v-spacing;
 }
 
-.marketing-permissions.marketing-permissions--newsletter {
+.component-marketing-consent.component-marketing-consent--newsletter {
   border-bottom: 1px solid gu-colour(garnett-neutral-4);
 }
 
-.marketing-permissions__message {
+.component-marketing-consent__message {
   font-family: $gu-text-egyptian-web;
   letter-spacing: -0.5px;
   margin-bottom: 24px;
   line-height: 20px;
 }
 
-.marketing-permissions__title {
+.component-marketing-consent__title {
   font-family: $gu-text-egyptian-web;
   letter-spacing: -0.5px;
   font-weight: 900;
