--- a/assets/components/adFreeSection/adFreeSection.scss
+++ b/assets/components/adFreeSection/adFreeSection.scss
@@ -1,5 +1,7 @@
 .component-ad-free-section {
   font-family: $gu-text-egyptian-web;
+  background: gu-colour(neutral-6);
+  border-bottom: 1px solid gu-colour(neutral-4);
 }
 
 .component-ad-free-section__content {
@@ -9,6 +11,7 @@
   padding-top: 2px;
   width: 100%;
   position: relative;
+  border-left: 1px solid gu-colour(neutral-4);
 }
 
 .component-ad-free-section__header {
@@ -18,7 +21,6 @@
   line-height: 1.12;
   font-family: $gu-headline;
   margin-bottom: 8px;
-  color: gu-colour(news-garnett-highlight);
 
   @include mq($from: leftCol) {
     width: 620px;
@@ -60,18 +62,4 @@
     width: 400px;
     margin-right: 40px;
   }
-}
-
-.component-ad-free-section__badge {
-  background: gu-colour(news-garnett-highlight);
-  color: gu-colour(garnett-neutral-1);
-  font-size: 26px;
-  font-weight: bold;
-  font-family: $gu-headline;
-  display: inline-block;
-  padding: 0 10px 1px;
-  top: 0px;
-  left: -92px;
-  position: absolute;
-  transform: rotate(-12deg);
 }
