use proper prices & copy

--- a/assets/components/adFreeSection/adFreeSection.scss
+++ b/assets/components/adFreeSection/adFreeSection.scss
@@ -1,7 +1,7 @@
 .component-ad-free-section {
   font-family: $gu-text-egyptian-web;
   background: gu-colour(neutral-6);
-  border-bottom: 1px solid gu-colour(neutral-4);
+  border-top: 1px solid gu-colour(neutral-4);
 }
 
 .component-ad-free-section__content {
