--- a/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
+++ b/assets/pages/digital-subscription-landing/components/independentJournalismSection.scss
@@ -1,5 +1,6 @@
 .component-independent-journalism {
   font-family: $gu-headline;
+  border-top: 1px solid gu-colour(neutral-4);
   color: #121212;
   @include mq($from: desktop) {
     border-left: 1px solid gu-colour(garnett-neutral-4);
