--- a/assets/components/adFreeSection/adFreeSection.scss
+++ b/assets/components/adFreeSection/adFreeSection.scss
@@ -16,15 +16,11 @@
 
 .component-ad-free-section__header {
   width: 100%;
-  font-size: 26px;
-  font-weight: bold;
-  line-height: 1.12;
-  font-family: $gu-headline;
+  @include gu-fontset-heading;
   margin-bottom: 8px;
 
   @include mq($from: leftCol) {
     width: 620px;
-    font-size: 36px;
     line-height: 1.17;
   }
 }
@@ -38,8 +34,7 @@
 }
 
 .component-ad-free-section__copy {
-  font-size: 16px;
-  line-height: 1.25;
+  @include gu-fontset-body;
   display: block;
   @include mq($from: leftCol) {
     width: 90%;
