--- a/assets/components/adFreeSection/adFreeSection.scss
+++ b/assets/components/adFreeSection/adFreeSection.scss
@@ -2,6 +2,7 @@
   font-family: $gu-text-egyptian-web;
   background: gu-colour(neutral-6);
   border-top: 1px solid gu-colour(neutral-4);
+  border-bottom: 1px solid gu-colour(neutral-4);
 }
 
 .component-ad-free-section__content {
