--- a/assets/components/headers/simpleHeader/simpleHeader.scss
+++ b/assets/components/headers/simpleHeader/simpleHeader.scss
@@ -101,6 +101,8 @@
   position: relative;
   box-shadow: inset 0 0 0 gu-colour(news-garnett-highlight);
   transition: .2s linear;
+  
+  .component-simple-header-nav__li--active &,
   &:hover {
     box-shadow: inset 0 3px 0 gu-colour(news-garnett-highlight);
   }
