--- a/app/views/settingsScript.scala.html
+++ b/app/views/settingsScript.scala.html
@@ -1,7 +1,7 @@
-@import admin.Settings
+@import admin.AllSettings
 @import views.ViewHelpers.printSettings
 
-@(settings: Settings)
+@(settings: AllSettings)
 
 <script type="text/javascript">
     window.guardian = window.guardian || {};
