--- a/assets/components/headers/simpleHeader/mobileheader.scss
+++ b/assets/components/headers/simpleHeader/mobileheader.scss
@@ -1,3 +1,31 @@
-.component-mobile-header {
+@import '~stylesheets/gu-sass/gu-sass';
+
+.component-mobile-header,
+.component-mobile-header-bg {
   position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+}
+
+.component-mobile-header-nav {
+  position: relative;
+  z-index: 10;
+  background: gu-colour(header-dark);
+  height: 100%;
+  overflow: auto;
+  margin-right: $gu-h-spacing*4;
+}
+
+.component-mobile-header-bg {
+  z-index: 9;
+  border: 0;
+  margin: 0;
+  padding: 0;
+  background: gu-colour(garnett-neutral-1);
+  opacity: .25;
 }
