--- a/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
+++ b/assets/components/countryGroupSwitcher/countryGroupSwitcher.scss
@@ -3,17 +3,18 @@
 
   .component-select-input__select {
     @include gu-fontset-body-sans;
+    @include mq($until: tablet) {
+      font-size: 14px;
+    }
+    line-height: 1;
     cursor: pointer;
     background-color: transparent;
     background: none;
     padding: 0;
     margin: 0;
     height: auto;
-    color: #fff;
-
-    &:hover {
-      text-decoration: underline;
-    }
+    border-radius: 0;
+    color: gu-colour(garnett-neutral-5);
 
     option {
       color: gu-colour(garnett-neutral-1);
@@ -21,6 +22,23 @@
 
     &::-ms-expand {
       background-color: transparent;
+    }
+  }
+
+  .svg-dropdown-arrow {
+    position: inline-block;
+    padding-top: 2px;
+    path {
+      fill: gu-colour(garnett-neutral-5);
+    }
+  }
+
+  &:hover {
+    .component-select-input__select {
+      color: gu-colour(news-garnett-highlight);
+    }
+    .svg-dropdown-arrow path {
+      fill: gu-colour(news-garnett-highlight);
     }
   }
 
