--- a/assets/components/checkoutExpander/checkoutExpander.scss
+++ b/assets/components/checkoutExpander/checkoutExpander.scss
@@ -18,7 +18,7 @@
 
 .component-checkout-expander__expando {
   margin-bottom: $gu-v-spacing;
-  button {
+  .component-button {
     margin-right: $gu-h-spacing /4;
   }
 }
