--- a/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
+++ b/assets/components/productPage/productPageContentBlock/productPageContentBlock.scss
@@ -139,7 +139,8 @@
   .component-product-page-text-block--heading-only + .component-product-page-content-block-divider {
     margin-top: ($gu-v-spacing*-1)
   }
-  .component-product-page-info-chip + .component-product-page-info-chip {
+  .component-product-page-info-chip + .component-product-page-info-chip,
+  .checkout-form {
     margin-top: ($gu-v-spacing * -1);
   }
   .component-product-page-content-block__content > .component-product-page-content-block-divider:first-child {
