--- a/assets/components/forms/standardFields/formFields.scss
+++ b/assets/components/forms/standardFields/formFields.scss
@@ -1,10 +1,11 @@
 @mixin form-field {
-  font-size: 16px;
-  font-family: $gu-text-sans-web;
+  @include gu-fontset-body-sans;
   border: 1px solid gu-colour(garnett-neutral-4);
   transition: box-shadow .2s;
   background-color: gu-colour(garnett-neutral-5);
   border-radius: 0;
+  width: 100%;
+  box-sizing: border-box;
 
   &:hover {
     box-shadow: 0 0 0 2px lighten(gu-colour(garnett-neutral-4), 6%);
@@ -22,9 +23,7 @@
 }
 
 @mixin label {
-  font-size: 16px;
-  line-height: 16px;
-  font-family: $gu-text-sans-web;
+  @include gu-fontset-body-sans;
   font-weight: bold;
   margin-bottom: $gu-v-spacing / 2;
   margin-top: $gu-v-spacing * 2;
