--- a/assets/components/forms/standardFields/input.scss
+++ b/assets/components/forms/standardFields/input.scss
@@ -3,12 +3,7 @@
 .component-input:not([type="radio"]) {
   @include form-field;
 
-  min-height: 38px;
-  padding-left: 12px;
-  padding-right: 12px;
-  width: calc(100vw - 46px);
-
-  @include mq($from: mobileMedium) {
-    width: 314px;
-  }
+  min-height: $gu-v-spacing * 3.5;
+  padding-left: $gu-h-spacing / 2;
+  padding-right: $gu-h-spacing / 2;
 }
