--- a/assets/components/forms/standardFields/select.scss
+++ b/assets/components/forms/standardFields/select.scss
@@ -3,18 +3,12 @@
 .component-select {
   @include form-field;
 
-  height: 42px;
-  padding-left: 8px;
-  padding-right: 8px;
-  width: calc(100vw - 20px);
+  min-height: $gu-v-spacing * 3.5;
+  padding-left: $gu-h-spacing / 2;
+  padding-right: $gu-h-spacing / 2;
   appearance: none;
   background-image: svg-url('<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19 10"><path d="M1.25.5l-.75.75L9 9.5h.95l8.55-8.25-.75-.75L9.5 7.25z" /></svg>');
   background-repeat: no-repeat;
   background-position: right 10px top 15px;
   background-size: 20px;
-
-  @include mq($from: mobileMedium) {
-    width: 340px;
-  }
-
 }
