--- a/assets/components/forms/customFields/radioInput.scss
+++ b/assets/components/forms/customFields/radioInput.scss
@@ -1,7 +1,6 @@
 .component-radio-input {
   display: block;
-  font-size: 16px;
-  font-family: $gu-text-sans-web;
+  @include gu-fontset-body-sans;
   cursor: pointer;
   margin-top: $gu-v-spacing;
   position: relative;
